WebVisualizations/assets/styles.css
/* ELEMENTS */

body {
  background-color: #ebecf1;
  background-image: url("../resources/bg.jpg");
}

a {
  color: #ebecf1;
}

h3 {
  color: #1b1c25
}

p {
  color: #1b1c25
}

img {
  margin-bottom: 1.5rem;
  max-width: 100%;
}

table {
  background-color: #fafafa;
}

/* CLASSES */

.row {
  margin: 1.5rem;
}

.dropdown-item {
  color: #1b1c25;
}

.card-block {
  background-color: #fafafa;
}

.card-img-top {
  margin: 0 !important;
}

.card-title {
  text-align: center;
}

.nav {
  display: flexbox;
}

.nav-link {
  color: #ebecf1;
}

.dataframe {
  align-content: center;
  width: 100%;
}



/* IDs */

#header_bar {
  background-color: #206a5d;
  filter: drop-shadow(3px 3px 3px #1b1c25);
  position: relative;
  z-index: 9999;
}

#logo_bar {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

#logo {
  color: #ebecf1;
  font-family: Georgia, 'Times New Roman', Times, serif;
  filter: drop-shadow(1px 1px 1px #1b1c25);
}

#main-content{
  background: rgba(235, 236, 241, .8);
  filter: drop-shadow(3px 3px 3px #1b1c25);
  z-index: 9;
}

#comparison-img {
  filter: drop-shadow(3px 3px 3px #1b1c25)
}

#navsplit {
  margin-top: 1.5rem;

}

#card-container{
  filter: drop-shadow(3px 3px 3px #1b1c25);
  }

#dropdownMenuButton {
  display: none;
}

@media (max-width: 768px) {
  
  .nav {
    display: none;
  }

  #logo {
    color: #ebecf1;
  }

  #header_bar {
    background-color: #206a5d;
  }
  
  #dropdownMenuButton{
    display: block;
    float: right;
  }
}

